k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nest-devops-todo-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nest-devops-todo-api
  template:
    metadata:
      labels:
        app: nest-devops-todo-api
    spec:
      containers:
        - name: nest-devops-todo-api
          image: DOCKER_USERNAME/nest-devops-todo-api:latest
          ports:
            - containerPort: 3000
          imagePullPolicy: Never
