k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nest-devops-todo-api-service
spec:
  selector:
    app: nest-devops-todo-api
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
