k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  ingressClassName: nginx
  rules:
    - host: api.todoapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-backend-service
                port:
                  number: 3000
